# Magma

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
editor/: CMakeLists.txt
editor/src/: Editor.cpp
editor/src/gui/: GuiContext.cpp  GuiContext.h  GuiRenderer.cpp  GuiRenderer.h
editor/src/gui/panes/: IPane.h  MenuBarPane.cpp  MenuBarPane.h  PropertiesPane.cpp  PropertiesPane.h  SceneHierarchyPane.cpp  SceneHierarchyPane.h  ViewportPane.cpp  ViewportPane.h
engine/: CMakeLists.txt
engine/assets/shaders/: colored_triangle.frag  colored_triangle.vert  colored_triangle.vert.spv
engine/common/exceptions/: MagmaRuntimeException.h
engine/common/logging/: Logging.h
engine/common/maths/: Vec.h  VectorOperatorMixin.h
engine/common/types/: SmartPointers.h  VkTypes.h
engine/include/magma_engine/: Engine.h  ServiceLocater.h  Window.h
engine/include/magma_engine/core/renderer/: BufferRegistry.h  ComputePipeline.h  DeletionQueue.h  DescriptorManager.h  GraphicsPipeline.h  Image.h  Pipeline.h  RenderGraph.h  RenderOrchestrator.h  RenderResourceAllocator.h  RenderStage.h  Renderer.h  ShaderModule.h  StageConfiguration.h  StageFactory.h  VkInitializers.h  VkUtils.h
engine/src/: Engine.cpp  Window.cpp
engine/src/core/renderer/: BufferRegistry.cpp  ComputePipeline.cpp  DescriptorManager.cpp  GraphicsPipeline.cpp  Pipeline.cpp  RenderGraph.cpp  RenderOrchestrator.cpp  RenderResourceAllocator.cpp  RenderStage.cpp  Renderer.cpp  ShaderModule.cpp  StageFactory.cpp  VkInitializers.cpp  VkUtils.cpp
scripts/: imgui-download.sh
